# kops

./: Gopkg.toml
cmd/kops/: create_cluster.go
nodeup/pkg/model/: protokube.go
pkg/apis/kops/: channel.go  cluster.go
pkg/apis/kops/v1alpha1/: cluster.go  zz_generated.conversion.go
pkg/apis/kops/v1alpha2/: cluster.go  zz_generated.conversion.go
pkg/apis/kops/validation/: legacy.go  validation.go
pkg/model/: master_volumes.go
pkg/model/azuremodel/: BUILD.bazel  autoscalinggroup.go  context.go  convenience.go  resourcegroup.go
pkg/model/components/: apiserver.go  kubecontrollermanager.go  kubelet.go
pkg/model/components/etcdmanager/: model.go
pkg/resources/azure/: BUILD.bazel  azure.go
pkg/resources/ops/: BUILD.bazel  collector.go
protokube/pkg/protokube/: azure_volume.go
upup/pkg/fi/: cloud.go  values.go
upup/pkg/fi/cloudup/: BUILD.bazel  apply_cluster.go  populate_instancegroup_spec.go  tagbuilder.go  utils.go
upup/pkg/fi/cloudup/azure/: BUILD.bazel  azure_apitarget.go  azure_cloud.go  labels.go  utils.go
upup/pkg/fi/cloudup/azuretasks/: BUILD.bazel  availabilityset.go  availabilityset_fitask.go  disk.go  disk_fitask.go  instance.go  resourcegroup.go  resourcegroup_fitask.go  utils.go
util/pkg/vfs/: BUILD.bazel  azsfs.go  azsfs_test.go  context.go  vfs.go
