load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["azure.go"],
    importpath = "k8s.io/kops/pkg/resources/azure",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/resources:go_default_library",
        "//upup/pkg/fi/cloudup/azure:go_default_library",
    ],
)
