load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "azure_apitarget.go",
        "azure_cloud.go",
        "labels.go",
        "utils.go",
    ],
    importpath = "k8s.io/kops/upup/pkg/fi/cloudup/azure",
    visibility = ["//visibility:public"],
    deps = [
        "//dnsprovider/pkg/dnsprovider:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/cloudinstances:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2018-04-01/compute:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2018-06-01/compute:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2018-02-01/resources:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/storage/mgmt/2018-02-01/storage:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure/auth:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
