load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "disk.go",
        "instance.go",
        "resourcegroup.go",
        "resourcegroup_fitask.go",
    ],
    importpath = "k8s.io/kops/upup/pkg/fi/cloudup/azuretasks",
    visibility = ["//visibility:public"],
    deps = [
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup/azure:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2018-04-01/compute:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2018-02-01/resources:go_default_library",
    ],
)
